this is not a tex repo

--- a/TwinkleSwarm.tex
+++ b/TwinkleSwarm.tex
@@ -21,7 +21,7 @@
 	\maketitle
 	
 	\begin{abstract}
-		This document provides a mathematical foundation for \texttt{TwinkleSwarm}, a simulation framework for coordinating illuminated drone swarms. We present the differential equations governing drone motion, analyze their behavior, and describe the algorithms for extracting target formations from images and motion patterns from videos. The framework combines control theory, particle dynamics, and computer vision to achieve collision-free formation control. \texttt{Claude Opus 4.5} was used to correct grammar, format math quickly, and check for errors.
+		This document provides a mathematical foundation for \texttt{TwinkleSwarm}, a simulation framework for coordinating illuminated drone swarms. We present the differential equations governing drone motion, analyze their behavior, and describe the algorithms for extracting target formations from images and motion patterns from videos. The framework combines control theory, particle dynamics, and computer vision to achieve collision-free formation control. \texttt{Claude Sonnet 4.5} was used to correct grammar, format math quickly, and check for errors.
 	\end{abstract}
 	
 	\section{Introduction}
