--- a/TwinkleSwarm.tex
+++ b/TwinkleSwarm.tex
@@ -49,7 +49,7 @@
 	
 	\subsection{Governing Equations}
 	
-	The motion of each drone follows a second-order system with velocity saturation and inter-drone repulsion. We present two formulations: the Initial Value Problem (IVP) for time-forward simulation and the Boundary Value Problem (BVP) for trajectory optimization.
+	The motion of each drone follows a second-order system with velocity saturation and inter-drone repulsion. We present the Initial Value Problem (IVP) formulation for time-forward simulation.
 	
 	\subsubsection{Initial Value Problem (IVP) Formulation}
 	
